models/vllm-embeddings/manifests/raw-deployments/msmarco-reranker/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: msmarco-reranker
  namespace: vllm-embeddings
  labels:
    app: msmarco-reranker
spec:
  to:
    kind: Service
    name: msmarco-reranker
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
